[metadata]
name = bucketstats
author = Matthew Prelee
author-email = mprelee@gmail.com
summary = Data analysis for bucketed data or histograms.
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/mprelee/bucketstats
project_urls =
    Bug Tracker = https://github.com/mprelee/bucketstats/issues
    Documentation = https://github.com/mprelee/bucketstats
    Source Code = https://github.com/mprelee/bucketstats
license = GPLv3.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Data Scientists :: Analysts
    Intended Audience :: Data Science
    License :: GPLv3.0
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    data science
    data analysis

[files]
packages =
    pbr

;data_files =
;    etc/pbr = etc/*
;    etc/init =
;        pbr.packaging.conf
;        pbr.version.conf
;[entry_points]
;console_scripts =
;    pbr = pbr.cmd:main
;pbr.config.drivers =
;    plain = pbr.cfg.driver:Plain
