[metadata]
name = bucketstats
author = Matthew Prelee
author-email = mprelee@gmail.com
summary = Data analysis for bucketed data or histograms.
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/mprelee/bucketstats
project_urls =
    Bug Tracker = https://github.com/mprelee/bucketstats/issues
    Documentation = https://github.com/mprelee/bucketstats
    Source Code = https://github.com/mprelee/bucketstats
license = GPLv3.0

